--- a/react-apollo/begin/package.json
+++ b/react-apollo/begin/package.json
@@ -12,7 +12,7 @@
     "semantic-ui-react": "^0.74.2"
   },
   "scripts": {
-    "start": "PORT 3001 react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
