--- a/graphql/end/package.json
+++ b/graphql/end/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/server.js",
   "scripts": {
-    "start": "nodemon ./src/server.js --exec babel-node -e js",
+    "start": "cross-env NEO4J_URI=bolt://localhost:7687/ NEO4J_USER=neo4j NEO4J_PASSWORD=admin nodemon ./src/server.js --exec babel-node -e js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,14 +14,16 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.23.0",
+    "cross-env": "^5.1.6",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "cors": "^2.8.4",
     "express": "^4.15.2",
     "graphql": "^0.11.7",
+    "graphql-server-express": "^0.6.0",
     "graphql-tools": "^2.5.0",
-    "neo4j-driver": "^1.4.1",
-    "graphql-server-express": "^0.6.0"
+    "neo4j-driver": "^1.4.1"
   }
 }
