--- a/react-apollo/end/package.json
+++ b/react-apollo/end/package.json
@@ -3,23 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.0.0",
+    "apollo-client": "^2.0.1",
+    "apollo-link-http": "^1.0.0",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
     "history": "^4.7.2",
     "react": "^16.0.0",
     "react-apollo": "^2.0.0",
     "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
     "react-scripts": "1.0.14",
-    "semantic-ui-react": "^0.74.2",
-    "graphql-tag": "^2.5.0",
-    "graphql": "^0.11.7",
-    "apollo-link-http": "^1.0.0",
-    "apollo-client": "^2.0.1",
-    "apollo-cache-inmemory": "^1.0.0"
+    "semantic-ui-react": "^0.74.2"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "cross-env PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "cross-env": "^5.1.6"
   }
 }
